update css fix to make sure material content renders correctly on mobile

--- a/content.css
+++ b/content.css
@@ -207,6 +207,3 @@
       width: 720px;
       max-width: 720px;
       margin-top: 100px; } }
-
-html {
-  font-size: 18px; }
